tests/snapshots/integration__integration_tests__remove__remove_by_name_dirty_target.snap
---
source: tests/integration_tests/remove.rs
info:
  program: wt
  args:
    - remove
    - feature-dirty
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpY6EoeS/test-config.toml
---
success: false
exit_code: 1
----- stdout -----
🔄 [36mRemoving worktree for [1m[36mfeature-dirty[0m...[0m
❌ [31mWorking tree has uncommitted changes[0m

💡 [2mCommit or stash them first[0m

----- stderr -----
