tests/snapshots/integration__integration_tests__remove__remove_switch_to_default.snap
---
source: tests/integration_tests/remove.rs
info:
  program: wt
  args:
    - remove
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpUF8Ywg/test-config.toml
---
success: false
exit_code: 1
----- stdout -----
🔄 [36mRemoving worktree for [1m[36mfeature[0m...[0m
❌ [31mCannot remove main worktree[0m

💡 [2mUse 'wt remove' from a secondary worktree, or 'wt switch' to change branches[0m

----- stderr -----
